<resources>
    <string name="app_name">Presente!</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="presente_logo">Presente Logo</string>
    <string name="aulas">Registrar Aulas</string>
    <string name="alunos">Alunos</string>
    <string name="projetos">Projetos</string>
    <string name="nome">Nome</string>
    <string name="sexo">Sexo</string>
    <string name="m">M</string>
    <string name="f">F</string>
    <string name="cpf">CPF</string>
    <string name="rg">RG</string>
    <string name="periodo">Período</string>
    <string name="matricula">Matrícula</string>
    <string name="curso">Curso</string>
    <string name="desenvolvimento_jogos">Desenvolvimento de Jogos</string>
    <string name="programacao_android">Programação para Android</string>
    <string name="aluno_ativo">Aluno ativo?</string>
    <string name="data_aula">Data da Aula</string>
    <string name="resumo">Resumo</string>
    <string name="marcar_presencas">Marcar Presenças</string>
    <string name="aluno">Aluno</string>
    <string name="titulo">Título</string>
    <string name="nota">Nota</string>
    <string name="fazer_chamada">Fazer Chamada!</string>
    <string name="instrutor">Nome do Instrutor</string>
    <string name="matricula_instrutor">Matricula do Instrutor</string>
    <string name="curso_ativo">Curso Ativo?</string>
    <string name="descricao">Descrição do Curso</string>
    <string name="carga_horaria">Carga Horária</string>
    <string name="salvar">Salvar</string>
    <string name="novo">Novo</string>
    <string name="cancelar">Cancelar</string>
    <string name="editar">Editar</string>
    <string name="deletar">Deletar</string>
    <string name="enviar">Enviar</string>
    <string-array name="periodos">
        <item>2º período</item>
        <item>3º período</item>
        <item>4º período</item>
        <item>5º período</item>
        <item>6º período</item>
        <item>7º período</item>
    </string-array>
    <string name="title_activity_cadastro_alunos">Cadastro de Alunos</string>
    <string name="title_activity_cadastro_projeto">Cadastro de Projetos</string>
    <string name="title_activity_cadastro_aula">Cadastro de Aulas</string>
    <string name="title_activity_cadastro_curso">Cadastro de Curso</string>



</resources>
