<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#ffffff"
    tools:context="com.cako.witalocarlos.presente.activity.CadastroAlunosActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_nome_aluno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome"
            android:textSize="@dimen/abc_text_size_body_2_material"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/tv_exibe_nome_aluno"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="@dimen/abc_text_size_body_1_material"
            android:textStyle="bold"
            android:layout_below="@id/tv_nome_aluno"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_sexo"
            android:text="@string/sexo"
            android:layout_below="@id/tv_exibe_nome_aluno"
            android:layout_marginTop="10dp"/>

        <RadioGroup
            android:id="@+id/rg_sexo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_sexo"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:paddingRight="10dp">

            <RadioButton

                android:id="@+id/rb_sexo_m"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m"
                android:padding="5dp"/>

            <RadioButton
                android:id="@+id/rb_sexo_f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/f"
                android:layout_marginLeft="5dp"
                android:padding="5dp"/>

        </RadioGroup>

        <TextView
            android:id="@+id/tv_exibe_cpf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="11"
            android:layout_below="@+id/tv_sexo"
            android:layout_alignRight="@id/tv_exibe_nome_aluno"
            />

        <TextView
            android:id="@+id/tv_cpf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cpf"
            android:layout_above="@+id/tv_exibe_cpf"
            android:layout_alignLeft="@+id/tv_exibe_cpf"
            android:layout_alignStart="@+id/tv_exibe_cpf" />

        <TextView
            android:id="@+id/tv_rg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rg"
            android:layout_below="@id/rg_sexo"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/tv_exibe_rg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_rg"
            />

        <TextView
            android:id="@+id/tv_periodos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_exibe_rg"
            android:text="@string/periodo"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/tv_exibe_periodo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_periodos"
            android:layout_marginTop="5dp"
            android:paddingRight="10dp"/>

        <TextView
            android:id="@+id/tv_exibe_matricula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:inputType="number"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_below="@id/tv_periodos"
            android:layout_toRightOf="@id/tv_exibe_periodo"
            android:layout_alignRight="@id/tv_exibe_periodo"/>

        <TextView
            android:id="@+id/tv_matricula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/matricula"
            android:layout_above="@id/tv_exibe_matricula"
            android:layout_alignLeft="@id/tv_exibe_matricula"
            android:layout_alignStart="@id/tv_exibe_matricula"/>

        <TextView
            android:id="@+id/tv_cursos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/curso"
            android:layout_marginTop="10dp"
            android:layout_below="@id/tv_exibe_periodo"
            />

        <CheckBox
            android:id="@+id/ck_android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/programacao_android"
            android:layout_below="@id/tv_cursos"
            android:layout_marginTop="10dp"/>

        <CheckBox
            android:id="@+id/ck_jogos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desenvolvimento_jogos"
            android:layout_below="@id/ck_android"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/tv_aluno_ativo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aluno_ativo"
            android:layout_below="@id/ck_jogos"
            android:layout_marginTop="10dp"/>

        <Switch
            android:id="@+id/sw_aluno_ativo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv_aluno_ativo"
            android:layout_marginLeft="10dp"
            android:textOff="Não"
            android:textOn="Sim"
            android:layout_below="@id/ck_jogos"/>

    </RelativeLayout>
</ScrollView>
