<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#ffffff"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/iv_logo"
        android:src="@drawable/presente_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp" />

    <Button
        android:id="@+id/bt_alunos"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/alunos"
        android:layout_below="@id/iv_logo"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/bt_registrar_aula"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bt_alunos"
        android:layout_marginTop="10dp"
        android:text="@string/aulas"/>

    <Button
        android:id="@+id/bt_projetos"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/projetos"
        android:layout_below="@id/bt_registrar_aula"
        android:layout_marginTop="10dp"/>


</RelativeLayout>
