<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#ffffff"
    tools:context="com.cako.witalocarlos.presente.activity.CadastroProjetoActivity">

    <TextView
        android:id="@+id/tv_aluno_projeto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aluno"
        android:layout_marginTop="15dp"/>

    <EditText
        android:id="@+id/et_aluno_projeto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_aluno_projeto"
        android:inputType="textPersonName"/>

    <TextView
        android:id="@+id/tv_titulo_projeto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:layout_below="@id/et_aluno_projeto"
        android:layout_marginTop="15dp"/>

    <EditText
        android:id="@+id/et_titulo_projeto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_titulo_projeto"/>

    <TextView
        android:id="@+id/tv_resumo_projeto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resumo"
        android:layout_below="@id/et_titulo_projeto"
        android:layout_marginTop="15dp"/>

    <EditText
        android:id="@+id/et_resumo_projeto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_resumo_projeto"
        android:maxLength="255"
        android:inputType="textMultiLine"
        android:maxLines="5"
        />

    <TextView
        android:id="@+id/tv_nota_projeto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nota"
        android:layout_below="@id/et_resumo_projeto"
        android:layout_marginTop="15dp"/>

    <EditText
        android:id="@+id/et_nota_aluno"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_below="@id/tv_nota_projeto"
        />

</RelativeLayout>
