<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#ffffff"
    tools:context="com.cako.witalocarlos.presente.activity.CadastroAulaActivity">

    <TextView
        android:id="@+id/tv_data_aula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_aula"
        android:layout_marginTop="10dp"/>

    <DatePicker
        android:id="@+id/dp_data_aula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:calendarViewShown="false"
        android:layout_below="@id/tv_data_aula"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/tv_resumo_aula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resumo"
        android:layout_below="@id/dp_data_aula"/>

    <EditText
        android:id="@+id/et_resumo_aula"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:maxLength="255"
        android:inputType="textMultiLine"
        android:maxLines="5"
        android:layout_below="@id/tv_resumo_aula"
        />

    <Button
        android:id="@+id/bt_fazer_chamada"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/fazer_chamada"
        android:layout_marginTop="15dp"
        android:layout_below="@id/et_resumo_aula"/>





</RelativeLayout>
